<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- main layout -->
    <LinearLayout
        android:id="@+id/layout_main_page_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp">

            <TextView
                android:id="@+id/txtWelcomeUsername"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!-- TODO: Used avatar image as login button for now -->
            <ImageButton
                android:id="@+id/imgBtnAvatar"
                android:onClick="profilePictureOnClick"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/default_avatar"
                android:scaleType="centerCrop"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp">
            <TextView
                android:id="@+id/txtViewRecommendedForYou"
                android:text="@string/recommended_for_you"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/progress_load_recommended"
            layout="@layout/progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp" />

        <include
            layout="@layout/recommended_cocktail_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp">
            <TextView
                android:id="@+id/txtViewTrendingRecipes"
                android:text="@string/trending_recipes"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
            <TextView
                android:id="@+id/txtViewSeeAll"
                android:text="@string/see_all"
                android:textSize="16sp"
                android:textColor="@color/accent_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            layout="@layout/error_msg_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"/>
        <include
            android:id="@+id/progress_load_trending"
            layout="@layout/progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp" />
        <include
            layout="@layout/trending_cocktail_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"/>
    </LinearLayout>
    <!-- main layout -->

    <!-- btn add recipe -->
    <LinearLayout
        android:id="@+id/layout_main_page_btn_add_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_recipe_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/accent_color"
            android:contentDescription="@string/add_recipe_button"
            android:onClick="onClickAddRecipe"
            android:src="@drawable/add_recipe" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>